finish forgot password and api docs
